--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -8,6 +8,26 @@
         action:
           - opened
           - changed
+    success:
+      github_conn:
+        comment: true
+        status: success
+    failure:
+      github_conn:
+        comment: true
+        status: failure
+    merge-failure:
+      github_conn:
+        comment: true
+        status: failure
+    start:
+      github_conn:
+        comment: true
+        status: pending
+    disabled:
+      github_conn:
+        comment: true
+
 
 - project:
     name: jluk-codi-org/zuul-test
