--- a/base-playbook.yaml
+++ b/base-playbook.yaml
@@ -1,2 +1,4 @@
-- name: Start zuul_console daemon.
-  zuul_console:
+- hosts: all
+  tasks:
+    - name: Start zuul_console daemon.
+      zuul_console:
