--- a/base-playbook.yaml
+++ b/base-playbook.yaml
@@ -2,6 +2,9 @@
   tasks:
     - name: Start zuul_console daemon.
       zuul_console:
+
+- hosts: localhost
+  tasks:
     - zuul_return:
         data:
           zuul:
