--- a/base-playbook.yaml
+++ b/base-playbook.yaml
@@ -8,4 +8,4 @@
     - zuul_return:
         data:
           zuul:
-            log_url: http://localhost:8000
+            log_url: "http://localhost:8000"
